--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-5.53MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-326.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-515.4KB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇸🇬 新加坡-209.4KB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.22MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-757.7KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-466.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-666.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-208.5KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-414.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-225.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-271.5KB/s(Youtube:不良林), server: 120.233.29.189, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 🇨🇳 中国-206.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-237.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-5.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-757.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-666.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-5.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-757.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-666.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-5.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-757.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-666.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-5.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-757.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-666.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-5.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-757.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-666.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-5.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-757.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-666.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-5.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-326.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-757.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-466.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-666.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-237.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
