--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.22MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-666.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-208.5KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-414.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-225.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-271.5KB/s(Youtube:不良林), server: 120.233.29.189, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
-  - {name: 🇨🇳 中国-206.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-237.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇸🇬 新加坡-1.31MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-630.0KB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-744.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-392.6KB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-402.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-215.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-396.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-383.1KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇨🇳 中国-292.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-449.2KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-666.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-630.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-744.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-392.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-292.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-666.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-630.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-744.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-392.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-292.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-666.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-630.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-744.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-392.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-292.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-666.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-630.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-744.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-392.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-292.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-666.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-630.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-744.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-392.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-292.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-666.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-630.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-744.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-392.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-292.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活5天)香港-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-666.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-208.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-237.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-630.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-744.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-392.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-383.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-292.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
