--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-5.35MB/s(Youtube:不良林), server: 103.173.255.127, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-215.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-1.31MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-6.03MB/s(Youtube:不良林), server: 103.173.255.234, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-323.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-311.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-449.2KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-7.04MB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.79MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-223.6KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇻🇳 越南-7.24MB/s(Youtube:不良林), server: 103.173.255.234, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
   - {name: 🇺🇸 美国-253.3KB/s(Youtube:不良林), server: 38.64.138.145, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-243.8KB/s(Youtube:不良林), server: 38.64.138.145, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇦🇺 澳大利亚-347.3KB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
   - {name: 🇭🇰 香港-2.31MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-236.5KB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-253.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-243.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-347.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-253.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-243.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-347.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-253.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-243.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-347.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-253.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-243.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-347.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-253.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-243.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-347.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-253.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-243.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-347.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-5.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.31MB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-323.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.6KB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-253.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-243.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-347.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-236.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
