--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-223.6KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-633.5KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-202.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇬🇧 英国-740.0KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-178.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 未知国家-1.84MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
-  - {name: 未知国家-411.1KB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 未知国家-202.1KB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
+  - {name: 🇨🇳 中国-311.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-889.1KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-432.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-930.5KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-449.2KB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.75MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: 6faa5110-0329-11ed-b74c-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
   - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-252.9KB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇦 加拿大-714.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-951.0KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-223.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-633.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-740.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.8KB/s(Youtube:不良林)
-      - 未知国家-1.84MB/s(Youtube:不良林)
-      - 未知国家-411.1KB/s(Youtube:不良林)
-      - 未知国家-202.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-930.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-252.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-223.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-633.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-740.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.8KB/s(Youtube:不良林)
-      - 未知国家-1.84MB/s(Youtube:不良林)
-      - 未知国家-411.1KB/s(Youtube:不良林)
-      - 未知国家-202.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-930.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-252.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-223.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-633.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-740.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.8KB/s(Youtube:不良林)
-      - 未知国家-1.84MB/s(Youtube:不良林)
-      - 未知国家-411.1KB/s(Youtube:不良林)
-      - 未知国家-202.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-930.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-252.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-223.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-633.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-740.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.8KB/s(Youtube:不良林)
-      - 未知国家-1.84MB/s(Youtube:不良林)
-      - 未知国家-411.1KB/s(Youtube:不良林)
-      - 未知国家-202.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-930.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-252.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-223.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-633.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-740.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.8KB/s(Youtube:不良林)
-      - 未知国家-1.84MB/s(Youtube:不良林)
-      - 未知国家-411.1KB/s(Youtube:不良林)
-      - 未知国家-202.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-930.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-252.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-223.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-633.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-740.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.8KB/s(Youtube:不良林)
-      - 未知国家-1.84MB/s(Youtube:不良林)
-      - 未知国家-411.1KB/s(Youtube:不良林)
-      - 未知国家-202.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-930.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-252.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-223.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-633.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-740.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.8KB/s(Youtube:不良林)
-      - 未知国家-1.84MB/s(Youtube:不良林)
-      - 未知国家-411.1KB/s(Youtube:不良林)
-      - 未知国家-202.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-889.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-930.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-449.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-252.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-951.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
